# wormward

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  action.yml
.github/: action-entrypoint.sh
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/desktop/src/: App.svelte  app.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/lib/: api.ts  env.ts  errors.test.ts  errors.ts  findings.test.ts  findings.ts  locations.test.ts  locations.ts  modal.ts  platform.ts  protection.test.ts  protection.ts  sanity.test.ts  state.svelte.ts  types.ts
apps/desktop/src/lib/components/: FindingCard.svelte  GuidedProgress.svelte  HealthChip.svelte  ShieldStatus.svelte
apps/desktop/src/routes/: Advanced.svelte  Clean.svelte  Doctor.svelte  GitHub.svelte  Home.svelte  MachineDetail.svelte  RepositoriesDetail.svelte  Results.svelte  Scan.svelte  ScanFlow.svelte  Settings.svelte  Workspace.svelte
crates/wormward-cli/: Cargo.toml
crates/wormward-cli/src/: doctor.rs  main.rs  mcp.rs  online.rs  report.rs  select.rs
crates/wormward-cli/tests/: cli.rs
crates/wormward-core/: Cargo.toml
crates/wormward-core/src/: capability.rs  engine.rs  finding.rs  git.rs  histrewrite.rs  hunt.rs  iocs.rs  lib.rs  lockfile.rs  matchers.rs  osv.rs  pack.rs  proc.rs  remediate.rs  repo_files.rs  rewrite.rs  rules.rs  sarif.rs  scanner.rs  surface.rs  typosquat.rs  walk.rs
crates/wormward-core/tests/: capability_integration.rs
crates/wormward-doctor/: Cargo.toml
crates/wormward-doctor/src/: lib.rs
crates/wormward-github/: Cargo.toml
crates/wormward-github/src/: api_tree.rs  audit.rs  lib.rs  pipeline.rs
crates/wormward-osm/: Cargo.toml
crates/wormward-osm/src/: lib.rs
crates/wormward-packs/: Cargo.toml
crates/wormward-packs/src/: lib.rs
crates/wormward-packs/src/axios_bluenoroff/: mod.rs  pack.yaml
crates/wormward-packs/src/glassworm/: mod.rs  pack.yaml
crates/wormward-packs/src/polinrider/: analyzer.rs  mod.rs  pack.yaml
crates/wormward-packs/src/shai_hulud/: mod.rs  pack.yaml
docs/: ci-integration.md  mcp.md
docs/superpowers/plans/: 2026-07-19-capability-engine.md  2026-07-19-execution-addendum.md  2026-07-19-github-api-scan.md  2026-07-19-github-scan-progress.md  2026-07-19-remediation-github-search.md  2026-07-20-antivirus-ux-redesign.md  2026-07-20-polinrider-phase1-coverage.md
docs/superpowers/specs/: 2026-07-19-account-audit-design.md  2026-07-19-capability-engine-design.md  2026-07-19-github-api-scan-design.md  2026-07-19-github-scan-progress-design.md  2026-07-19-local-scan-progress-cancel-design.md  2026-07-19-remediation-github-search-design.md  2026-07-20-antivirus-ux-redesign-design.md  2026-07-20-gui-professionalization.md  2026-07-20-polinrider-capability-gaps-and-spec.md  2026-07-20-wormward-fp-hardening.md
