[workspace]
resolver = "2"
members = ["crates/wormward-core", "crates/wormward-packs", "crates/wormward-cli", "crates/wormward-osm", "crates/wormward-github", "crates/wormward-doctor"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/0fatihyildiz/wormward"

[workspace.dependencies]
aho-corasick = "1"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
regex = "1"
sha2 = "0.10"
hex = "0.4"
globset = "0.4"
rayon = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tempfile = "3"
ureq = "2"
httpmock = "0.7"
dialoguer = "0.11"
