[package]
name = "wormward-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "wormward"
path = "src/main.rs"

[dependencies]
wormward-core = { path = "../wormward-core" }
wormward-packs = { path = "../wormward-packs" }
wormward-doctor = { path = "../wormward-doctor" }
wormward-osm = { path = "../wormward-osm" }
wormward-github = { path = "../wormward-github" }
clap = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { workspace = true }
dialoguer = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
httpmock = { workspace = true }
