[package]
name = "wormward-core"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
globset = { workspace = true }
walkdir = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
