[package]
name = "wormward-github"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ureq = { workspace = true }
rayon = { workspace = true }
tempfile = { workspace = true }
wormward-core = { path = "../wormward-core" }
wormward-packs = { path = "../wormward-packs" }

[dev-dependencies]
httpmock = { workspace = true }
